--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,2 @@
-<h1>My pipeline</h1>
-<h2>I did it!!!!</h2>
-<h2>I add more stuff to trigger the pipeline</h2>
-<p>test</p>
-<p>test1</p>
+<h1>{{ title }}</h1>
+<app-heroes></app-heroes>
